--- a/6694.bib
+++ b/6694.bib
@@ -1,3 +1,40 @@
+@inproceedings{Vaswani2017,
+ author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, \L ukasz and Polosukhin, Illia},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {I. Guyon and U. Von Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Attention is All you Need},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf},
+ volume = {30},
+ year = {2017}
+}
+
+
+@inproceedings{HeChen2018,
+ author = {He, Lifang and Chen, Kun and Xu, Wanwan and Zhou, Jiayu and Wang, Fei},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {S. Bengio and H. Wallach and H. Larochelle and K. Grauman and N. Cesa-Bianchi and R. Garnett},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Boosted Sparse and Low-Rank Tensor Regression},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2018/file/8d34201a5b85900908db6cae92723617-Paper.pdf},
+ volume = {31},
+ year = {2018}
+}
+
+
+@article{Johnson2021,
+title = {Community-level factors and incidence of gun violence in the United States, 2014–2017},
+journal = {Social Science \& Medicine},
+volume = {280},
+pages = {113969},
+year = {2021},
+doi = {https://doi.org/10.1016/j.socscimed.2021.113969},
+url = {https://www.sciencedirect.com/science/article/pii/S0277953621003014},
+author = {Blair T. Johnson and Anthony Sisti and Mary Bernstein and Kun Chen and Emily A. Hennessy and Rebecca L. Acabchuk and Michaela Matos},
+}
+
 @article{ChenChanStenseth2012,
   Author =	 {Chen, K. and Chan, K.-S. and Stenseth, N. C.},
   Journal =	 {Journal of the Royal Statistical Society: Series B},
