--- a/6694.bib
+++ b/6694.bib
@@ -1,3 +1,78 @@
+@article{ChenAseltineWangChen2024,
+  author  = {Chen, Jianmin and Aseltine, Robert H. and Wang, Fei and Chen, Kun},
+  title   = {Tree-Guided Rare Feature Selection and Logic Aggregation with Electronic Health Records Data},
+  journal = {Journal of the American Statistical Association},
+  year    = {2024},
+  doi     = {10.1080/01621459.2024.2326621},
+  url     = {https://www.tandfonline.com/doi/abs/10.1080/01621459.2024.2326621}
+}
+
+@misc{WangWangChen2025RDFS,
+  author       = {Wang, Jing and Wang, HaiYing and Chen, Kun},
+  title        = {Robust Data Fusion via Subsampling},
+  year         = {2025},
+  eprint       = {2508.12048},
+  archivePrefix= {arXiv},
+  primaryClass = {stat.ML},
+  url          = {https://arxiv.org/abs/2508.12048}
+}
+
+
+
+@article{SaccoChen2025,
+	abstract = {Suicide is within the top 10 causes of death in the US and rates have increased over 30{\%} in the last two decades. Identifying suicide risk in healthcare settings has become a national priority and predicting risk using statistical models has emerged as a promising approach to achieve this. Numerous previously published models drawing on information in hospital records, insurance claims, or single healthcare networks perform reasonably well. With recent federal mandates established to develop health information exchanges (HIEs) that include patient information from both diverse healthcare settings and multiple healthcare networks, it is imperative to determine whether this newer data source offers an opportunity to model suicide risk with robust yet largely non-curated, real-world patient information. We examined the characteristics and performance of suicide risk models developed from a HIE, the Kansas Health Information Network.},
+	author = {Sacco, Shane J. and Chen, Kun and Jin, Jun and Tang, Boyang and Wang, Fei and Aseltine, Robert H.},
+	date = {2025/04/29},
+	date-added = {2025-08-28 10:34:06 -0400},
+	date-modified = {2025-08-28 10:34:06 -0400},
+	doi = {10.1186/s12889-025-22752-x},
+	id = {Sacco2025},
+	isbn = {1471-2458},
+	journal = {BMC Public Health},
+	number = {1},
+	pages = {1582},
+	title = {Identifying patients at risk of suicide using data from health information exchanges},
+	url = {https://doi.org/10.1186/s12889-025-22752-x},
+	volume = {25},
+	year = {2025},
+	bdsk-url-1 = {https://doi.org/10.1186/s12889-025-22752-x}}
+
+
+@article{Belkin2019,
+  author    = {Belkin, Mikhail and Hsu, Daniel and Ma, Siyuan and Mandal, Soumik},
+  title     = {Reconciling modern machine-learning practice and the classical bias-variance trade-off},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2019},
+  volume    = {116},
+  number    = {32},
+  pages     = {15849--15854},
+  doi       = {10.1073/pnas.1903070116},
+  url       = {https://doi.org/10.1073/pnas.1903070116}
+}
+
+@article{Hastie2022,
+  author    = {Hastie, Trevor and Montanari, Andrea and Rosset, Saharon and Tibshirani, Ryan J.},
+  title     = {Surprises in high-dimensional ridgeless least squares interpolation},
+  journal   = {The Annals of Statistics},
+  year      = {2022},
+  volume    = {50},
+  number    = {2},
+  pages     = {949--986},
+  doi       = {10.1214/21-AOS2133},
+  url       = {https://doi.org/10.1214/21-AOS2133}
+}
+
+@article{Fienberg2006,
+  author    = {Stephen E. Fienberg},
+  title     = {When Did Bayesian Inference Become ``Bayesian''?},
+  journal   = {Bayesian Analysis},
+  year      = {2006},
+  volume    = {1},
+  number    = {1},
+  pages     = {1--37},
+  doi       = {10.1214/06-BA101},
+}
+
 @inproceedings{Vaswani2017,
  author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, \L ukasz and Polosukhin, Illia},
  booktitle = {Advances in Neural Information Processing Systems},
