--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,25 +1,49 @@
 # Introduction {#intro}
 
-What does a statistical or data science paper look like? As with all scientific papers, it should have some commonly expected structures: title, abstract, keywords, introduction, methods, results, discussion, acknowledgements, references, appendix, and supplement. Due to the specificity of the statistical discipline, machine learning practices, and application domains, however, research papers can look very different from one another.  
+What does a statistical or data science paper look like, and why should we study it? For many students and researchers, writing a paper is one of the most challenging yet most important parts of their training. A paper is more than just record of results; correctness is only the bottom line. A paper is the primary way for researchers to *communicate ideas, establish credibility, and contribute to scientific literature*. 
 
-What does a statistical or data science paper look like, and why should we study it? For many students and researchers, writing a paper is one of the most challenging yet most important parts of their training. A paper is more than just record of results; correctness is only the bottom line. A paper is the primary way for researchers to communicate ideas, establish credibility, and contribute to scientific literature. Good writing makes research visible, while poor writing may jeopardize delay the acknowledgement of even the most important discoveries.  
+Good writing and good outlet for dissemination make research visible, while poor writing and poor communication may jeopardize delay the acknowledgement of even the most important discoveries.  
 
-As with all scientific papers, statistical and data science articles generally follow a set of commonly expected structures: title, abstract, keywords, introduction, methods, results, discussion, acknowledgements, references, appendix, and supplement. Yet, due to the specificity of the statistical discipline, the practices of machine learning, and the variety of application domains, research papers can look very different from one another.  
 
-This book (and its companion course) is motivated by the need to make these conventions explicit, to demystify the writing process, and to provide practical guidance through many examples and exercises. It is designed for graduate students and researchers who wish to sharpen their writing, whether they are preparing a dissertation chapter, a methodological paper, or an applied paper. Our goal is to teach students *how* statistical and data science papers are structured, *why* they are written in such ways, and *what* we shall do to adapt writing for different audiences and outlets.
+:::{.example}
+[Gregor Mendel and genetics](https://www.forbes.com/sites/kionasmith/2018/02/08/why-everyone-overlooked-gregor-mendels-groundbreaking-paper/)
+
+Mendel published his classic paper on inheritance in pea plants in 1866. The work was rigorous, statistically sound, and groundbreaking. Yet it was written in a dense, formal style, published in an obscure local journal, and largely ignored. For more than 30 years, the paper received almost no attention. It wasn't until around 1900, when three different botanists independently "rediscovered" Mendel's work, that the importance of his discoveries became widely acknowledged.
+:::
+
+:::{.example}
+Bayes' Theorem (1763)
+
+Thomas Bayes' essay on inverse probability was published after his death, edited by Richard Price. The presentation was dense, lacked context, and was hard to follow. For nearly two centuries, the paper was little known outside a small circle. 
+
+The following is a direct quote from @Fienberg2006. 
+
+*My story begins, of course, with the Reverend Thomas Bayes, a nonconformist English minister whose 1763 posthumously published paper, "An Essay Towards Solvinga Problem in the Doctrine of Chances," contains what is arguably the first detailed description of the theorem from elementary probability theory now associated with his name. Bayes' paper, which was submitted for publication by Richard Price, is remarkably opaque in its notation and details, and the absence of integral signs makes for diﬃcult reading to those of us who have come to expect them.*
+
+It wasn't until the 20th century, with Laplace's reformulation and later Bayesian revival in the 1950s-60s, that Bayes' original insight became central to statistics, and now, to machine learning and AI. 
+
+This is an example where even a foundational idea can be "hidden" for generations if not clearly communicated.
+:::
+
+
+As with all scientific papers, it should have some commonly expected structures, including but not limited to *title, abstract, keywords, introduction, methods, results, discussion, acknowledgements, references, appendix, and supplement*. Due to the specificity of the statistical discipline, machine learning practices, and application domains, however, research papers can look very different from one another. 
+
+This book is motivated by the need to make these conventions explicit, to demystify the writing process, and to provide practical guidance through many examples and exercises. It is designed for students and researchers who wish to sharpen their writing, whether they are preparing a dissertation chapter, a methodological paper, or an applied paper. 
+
+Our overarching goal is to teach students *how* statistical and data science papers are structured, *why* they are written in such ways, and *what* we shall do to adapt writing for different audiences and outlets.
 
 
 ---
 
-## Types of Papers in Statistics and Data Science
+## Types of Papers in Statistics and Data Science {#ch1-sec-papers}
 
-### Theory Papers
+### Theory Paper
 
-A **theory paper** in statistics and probability is closest in form to a mathematical paper. It typically includes the statement of the problem, formulation of assumptions, and the presentation of theorems, lemmas, and proofs. The purpose is often to establish fundamental properties of certain statistical or probabilistic tools/approaches, including but well beyond consistency, efficiency, optimality, convergence, asymptotic distributions, and non-asymptotic error bounds. 
+A **theory paper** in statistics is closest in form to a mathematical paper. It typically includes the statement of the problem, formulation of assumptions, and the presentation of theorems, lemmas, and proofs. The purpose is often to establish fundamental properties of certain statistical or probabilistic tools/approaches, including but well beyond consistency, efficiency, optimality, convergence, asymptotic distributions, and non-asymptotic error bounds. 
 
-While theory papers may not always feature data, simulations, or applications, they form the **mathematical and probabilistic foundation** upon which methodology and applied work are built.  
+While theory papers may not always feature data, simulations, or applications, they form mathematical and probabilistic foundations upon which methodology and applied work are built.  
 
-Most of the articles in journals such as *Annals of Statistics*, *Annals of Probability*, *Bernoulli*, *Probability Theory and Related Fields*, among others, are considered as theory papers. In other words, these journals should be the primary outlets for a theory paper. 
+Most of the articles in journals such as [*Annals of Statistics*](https://imstat.org/journals-and-publications/annals-of-statistics/), [*Annals of Probability*](https://imstat.org/journals-and-publications/annals-of-probability/), and  [*Bernoulli*](https://projecteuclid.org/journals/bernoulli), among others, are considered as theory papers. In other words, these journals should be the primary outlets for a theory paper. 
 
 Examples include @Foygel2021. 
 
@@ -27,7 +51,7 @@ Examples include @Foygel2021.
 
 
 
-### Methodological Papers
+### Methodological Paper
 A **methodological paper** focuses on proposing a novel methodological contribution that can be applied to a general class of real-world problems. A commonly seen structure is:  
 
 + Introduction
@@ -45,12 +69,14 @@ Such papers emphasize methodological development, often with a blend of theory (
 In other words, the most impactful methodological contributions are those that connect with practical relevance. They are inspired by genuine applied needs, but provide solutions that are general enough to influence future work in an important domain or even across different domains. 
 
 
+Most of the articles in journals such as [*Journal of the American Statistical Association* (JASA)](https://www.tandfonline.com/journals/uasa20), [*Biometrika*](https://academic.oup.com/biomet), [*Journal of Computational and Graphical Statistics* (JCGS)](https://www.tandfonline.com/journals/ucgs20), and [*Journal of the Royal Statistical Society, Series B* (JRSSB)](https://academic.oup.com/jrsssb), among others, are considered methodological papers. In other words, these journals are among the primary outlets for presenting new statistical methods that combine theoretical development with empirical validation through simulations and applications.
+
 Example include @li2023regularized, @lau2022bias, and @ChenChanStenseth2012. 
 
 [Download @ChenChanStenseth2012](files/papers/ChenChanStenseth2012.pdf). 
 
 
-### Applied Papers
+### Applied Paper
 An **applied paper** focuses on addressing a concrete scientific question in a particular domain using statistical or data science methods. Its structure often includes:  
 
 + Introduction  
@@ -59,13 +85,16 @@ An **applied paper** focuses on addressing a concrete scientific question in a p
 + Results  
 + Discussion  
 
-What we call "applied papers" here includes a large portion of scientific papers that rely on data analytics, statistics, and machine learning methods. In many scientific domains, these papers may in fact be considered theoretical or methodological contributions within that field. For instance, an applied paper with genomical data analysis could be regarded as a methodological paper in genetics.  
+These applied papers may involve applying existing methods or developing new ones motivated by a specific scientific or practical problem. Sometimes, simulation studies are added to assess robustness or sensitivity. 
 
-Such works are most often interdisciplinary, typically resulting from close collaborations between statisticians, data scientists, and domain experts. They showcase how quantitative methods advance science in other fields, while also motivating the development of new techniques within statistics and machine learning.
+In practice, the distinction between a methodological paper and an applied paper is often blurry, and rightly so. From our perspective, an applied paper in statistics can still be regarded as a methodological paper, but one where the motivation and primary contribution are clearly tied to addressing real-world problems.
 
-Sometimes, simulation studies are added to assess sensitivity. Applied papers may involve applying existing methods or developing new ones motivated by the application. 
+Most of the articles in journals such as [*The Annals of Applied Statistics*(AoAS)](https://projecteuclid.org/journals/annals-of-applied-statistics), [*Biostatistics*](https://academic.oup.com/biostatistics), [*Biometrics*](https://onlinelibrary.wiley.com/journal/15410420), [*Journal of the Royal Statistical Society, Series C* (Applied Statistics)](https://academic.oup.com/jrsssc), and [*Statistics in Medicine*](https://onlinelibrary.wiley.com/journal/10970258), among others, are considered such applied papers. In other words, these journals are primary outlets for presenting statistical applications that address concrete scientific or medical problems, often integrating existing methods, developing adaptations, and demonstrating their impact in real-world data analyses.
 
-Examples include @price2022effects, @caplan2019dental, @jiao2022cyberattack, and @Johnson2021. 
+It should also be noted that what we call "applied papers" here also includes a large portion of scientific papers that rely on data analytics, statistics, and machine learning methods. In many scientific domains, these papers may in fact be considered theoretical or methodological contributions within that field. For instance, an applied paper with genomical data analysis could be regarded as a methodological paper in genetics. Such works are most often interdisciplinary, typically resulting from close collaborations between statisticians, data scientists, and domain experts. They showcase how quantitative methods advance science in other fields, while also motivating the development of new techniques within statistics and machine learning.
+
+Examples of applied papers include @price2022effects, @caplan2019dental, @jiao2022cyberattack, and @Johnson2021. 
+
 
 [Download @Johnson2021](files/papers/Johnson2021.pdf). 
 
@@ -93,9 +122,44 @@ Examples include @Vaswani2017, and @HeChen2018.
 
 ---
 
+### Review Papers, Opinion Pieces, and Perspectives
+
+In addition to theory, methodological, and applied research articles, review papers and opinion pieces play an increasingly important role in statistics and data science. These contributions do not always present new methods or data analyses, but they synthesize, interpret, and reflect on existing work, shaping how the field understands itself and where it is headed.
+
+*Review papers* (or survey articles) aim to provide a structured overview of a research area. Strong review papers go beyond summarizing prior work: they evaluate the strengths and limitations of existing approaches, identify common themes, and highlight unresolved challenges. They serve as intellectual roadmaps for both newcomers and experts, helping readers quickly grasp the state of the art. Classic outlets for review papers include [*Statistical Science*](https://imstat.org/journals-and-publications/statistical-science/), [*Annual Review of Statistics and Its Application*](https://www.annualreviews.org/journal/statistics), and [*International Statistical Review*](https://onlinelibrary.wiley.com/journal/17515823).
+
+
+*Opinion pieces and perspectives* provide expert commentary, critique, or vision. These papers may challenge conventional wisdom, advocate for new practices, or highlight broader impacts of statistics and data science on society. They often aim to spark discussion, reframe debates, and encourage innovation. Examples of venues that emphasize perspectives and commentary include [*Harvard Data Science Review (HDSR)*](https://hdsr.mitpress.mit.edu), which blends reviews, perspectives, columns, and opinion pieces. 
+
+Together, review papers and opinion pieces are essential for the vitality of the discipline. They consolidate knowledge, guide future research, and provide reflective perspectives that extend beyond technical details. 
+
+
+Check [Editor's Column](https://hdsr.mitpress.mit.edu/editorscolumn) at HDSR. 
+
+---
+
 ## Scientific Writing Resources
 
-Many resources on scientific writing are available. For example, @gopen1990science was selected by its publisher, *American Scientist*, as one of its 36 "Classic Articles" from the first 100 years of publishing history. Popular books are @oshima2000writing, @gopen2004expectations, @hairston2003successful, and @lebrun2021scientific.  
+Many resources on scientific writing are available. For example, @gopen1990science was selected by its publisher, *American Scientist*, as one of its 36 "Classic Articles" from the first 100 years of publishing history ([link](https://www.americanscientist.org/blog/the-long-view/the-science-of-scientific-writing)). Some tips offered by @gopen1990science are summerized below: 
+
+1. *Write with the reader's expectations in mind.*  
+   Readers interpret prose not just by its content, but through structural cues. Clarity depends on aligning writing structure with how readers naturally process text.  
+
+2. *Use the "topic" and "stress" positions effectively.*  
+   - *Topic position* (sentence beginning): establish context and link to what came before.  
+   - *Stress position* (sentence ending): deliver the most important or new information.  
+
+3. *Keep the subject and verb close together.*
+   Avoid long interruptions between subject and verb. Burying the verb makes the sentence harder to follow.  
+
+4. *Maintain logical flow: old → new, context → conclusion.*  
+   Start sentences with familiar information and end with new ideas. This ordering helps readers build meaning smoothly.  
+
+5. *Match structure with emphasis.*  
+   Important information should appear in prominent structural positions (topic or stress). If structure and substance are misaligned, readers may miss your main point.  
+
+
+Popular writing books include @oshima2000writing, @gopen2004expectations, @hairston2003successful, and @lebrun2021scientific.  
 
 ---
 
