Added Chapter 4; not finished

--- a/6694.bib
+++ b/6694.bib
@@ -1,3 +1,71 @@
+@inproceedings{vaswani2017attention,
+  title     = {Attention Is All You Need},
+  author    = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
+  volume    = {30},
+  year      = {2017},
+  pages     = {5998--6008}
+}
+
+@article{chen2013rrr,
+  title     = {Reduced Rank Regression via Adaptive Nuclear Norm Penalization},
+  author    = {Chen, Kun and Chan, Kung-Sik and Stenseth, Nils Chr},
+  journal   = {Biometrika},
+  volume    = {99},
+  number    = {2},
+  pages     = {379--394},
+  year      = {2013}
+}
+
+@inproceedings{kingma2015adam,
+  title     = {Adam: A Method for Stochastic Optimization},
+  author    = {Kingma, Diederik P. and Ba, Jimmy},
+  booktitle = {International Conference on Learning Representations (ICLR)},
+  year      = {2015}
+}
+
+
+
+@article{tibshirani1996lasso,
+  title     = {Regression Shrinkage and Selection via the Lasso},
+  author    = {Tibshirani, Robert},
+  journal   = {Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume    = {58},
+  number    = {1},
+  pages     = {267--288},
+  year      = {1996}
+}
+
+@article{tibshirani2001gap,
+  title     = {Estimating the Number of Clusters in a Data Set via the Gap Statistic},
+  author    = {Tibshirani, Robert and Walther, Guenther and Hastie, Trevor},
+  journal   = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  volume    = {63},
+  number    = {2},
+  pages     = {411--423},
+  year      = {2001}
+}
+
+@article{efron2004lars,
+  title     = {Least Angle Regression},
+  author    = {Efron, Bradley and Hastie, Trevor and Johnstone, Iain and Tibshirani, Robert},
+  journal   = {The Annals of Statistics},
+  volume    = {32},
+  number    = {2},
+  pages     = {407--499},
+  year      = {2004}
+}
+
+@article{breiman2001rf,
+  title     = {Random Forests},
+  author    = {Breiman, Leo},
+  journal   = {Machine Learning},
+  volume    = {45},
+  number    = {1},
+  pages     = {5--32},
+  year      = {2001}
+}
+
 @article{ChenAseltineWangChen2024,
   author  = {Chen, Jianmin and Aseltine, Robert H. and Wang, Fei and Chen, Kun},
   title   = {Tree-Guided Rare Feature Selection and Logic Aggregation with Electronic Health Records Data},
